[package]
name = "bebrohide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.2"
argon2 = "0.5.1"
bincode = "1.3.3"
clap = "4.4.2"
serde = { version = "1.0.188", features = ["derive"]}
