[package]
name = "bebrohide"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Simple CLI to hide file inside another one"
readme = "README.md"
repository = "https://github.com/Huterok228/bebrohide"
keywords = ["bebra", "hide", "bebrohide", "file", "cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bebrohide"
path = "src/main.rs"
doc = false

[dependencies]
aes-gcm = "0.10.2"
argon2 = "0.5.1"
bincode = "1.3.3"
clap = "4.4.2"
serde = { version = "1.0.188", features = ["derive"]}
